--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
@@ -17,15 +18,15 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link mx-4" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link mx-4" href="#">About</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+                        <a class="nav-link dropdown-toggle mx-4" href="#" id="navbarDropdown" data-toggle="dropdown">
                             Products
                         </a>
                         <div class="dropdown-menu">
@@ -36,17 +37,19 @@
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link mx-4" href="#">Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <div class="jumbotron">
-            <h1 class="display-4">Join BMA Today</h1>
+        <div class="jumbotron text-center">
+            <h1 class="display-3">Eat. Shop. Play.</h1>
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
-            <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6053.706816712172!2d-74.00827580653745!3d40.65516168490206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ac0786c3207%3A0x97a4c7862e8ef155!2sIndustry+City!5e0!3m2!1sen!2sus!4v1520485263039" width="1000" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <p class="lead m-0">
+                <a class="btn btn-primary btn-lg mt-4" href="#" role="button">Find out more</a>
             </p>
+            <p class="lead small"><a href><u>Click here to register</u></a></p>
         </div>
         <div class="container">
             <div class="row">
@@ -79,7 +82,9 @@
                             <p>Here you can use rows and columns here to organize your footer content.</p>
                         </div>
                         <div class="col-md-3">
-                            <p>Social media icons will go here.</p>
+                            <a href="#" class="mx-4"><i class="fab fa-instagram fa-3x"></i></a>
+                            <a href="#" class="mx-4"><i class="fab fa-facebook fa-3x"></i></a>
+                            <a href="#" class="mx-4"><i class="fab fa-twitter fa-3x"></i></a>
                         </div>
                         <div class="col-md-4">
                             <h5 class="text-uppercase">Instagram Feed</h5>
