--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Raleway:100" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#"><img src="assets/img/Logo.jpg" width="200" height="auto"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
@@ -56,16 +57,16 @@
                 <div class="col-sm-12 col-md-8">
                     <div class="card m-3">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Company Listings</h5>
                             <p class="card-text">Some quick example text to build on the card title</p>
                             <a href="#" class="card-link">Another link</a>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card m-3">
+                    <div class="card m-3 groupon">
                         <div class="card-body text-center">
-                            <h5 class="card-title">Card title</h5>
+                            <h5 class="card-title">Groupon</h5>
                             <p class="card-text">Some quick example text to build on the card title</p>
                             <a href="#" class="card-link">Another link</a>
                         </div>
@@ -81,7 +82,7 @@
                             <h5 class="text-uppercase">Input/Newsletter Form Here</h5>
                             <p>Here you can use rows and columns here to organize your footer content.</p>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 text-center">
                             <a href="#" class="mx-4"><i class="fab fa-instagram fa-3x"></i></a>
                             <a href="#" class="mx-4"><i class="fab fa-facebook fa-3x"></i></a>
                             <a href="#" class="mx-4"><i class="fab fa-twitter fa-3x"></i></a>
