--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" id="maincon">
         <nav class="navbar navbar-expand-lg navbar-dark">
             <a class="navbar-brand" href="#"><img src="assets/img/Logo.jpg" width="200" height="auto"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -74,18 +74,26 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid mt-5" id="foot">
             <footer class="page-footer font-small blue pt-4 mt-4">
                 <div class="container-fluid text-center text-md-left">
                     <div class="row">
-                        <div class="col-md-5">
-                            <h5 class="text-uppercase">Input/Newsletter Form Here</h5>
-                            <p>Here you can use rows and columns here to organize your footer content.</p>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">SIGN UP FOR OUR NEWSLETTER</label>
+                                <div class="input-group">
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                                    <span class="input-group-btn">
+                                    <button type="submit" class="btn btn-primary ml-3">Submit</button>
+                                </span>
+                                </div>
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            </div>
                         </div>
-                        <div class="col-md-3 text-center">
-                            <a href="#" class="mx-4"><i class="fab fa-instagram fa-3x"></i></a>
-                            <a href="#" class="mx-4"><i class="fab fa-facebook fa-3x"></i></a>
-                            <a href="#" class="mx-4"><i class="fab fa-twitter fa-3x"></i></a>
+                        <div class="col-md-4 text-center align-bottom">
+                            <a href="#" class="mx-3"><i class="fab fa-instagram fa-3x"></i></a>
+                            <a href="#" class="mx-3"><i class="fab fa-facebook fa-3x"></i></a>
+                            <a href="#" class="mx-3"><i class="fab fa-twitter fa-3x"></i></a>
                         </div>
                         <div class="col-md-4">
                             <h5 class="text-uppercase">Instagram Feed</h5>
