--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                     </div>
                     <div class="modal-body">
                         <form id="requestacallform" method="POST" name="requestacallform">
-
                             <div class="form-group">
                                 <div class="input-group">
                                     <span class="input-group-addon"></span>
@@ -67,7 +66,7 @@
     </div>
     <div class="container-fluid" id="maincon">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="#"><img src="assets/img/Logo.jpg" width="200" height="auto"></a>
+            <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -96,7 +95,8 @@
                 </ul>
             </div>
         </nav>
-        <div class="jumbotron pb-2 text-center">
+        <div class="jumbotron pb-2 pt-4 text-center">
+            <img src="assets/img/Logo.jpg" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
             <iframe class="mainmap" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6053.706816712172!2d-74.00827580653745!3d40.65516168490206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ac0786c3207%3A0x97a4c7862e8ef155!2sIndustry+City!5e0!3m2!1sen!2sus!4v1520485263039" width="1000" height="450" frameborder="0" allowfullscreen></iframe>
@@ -107,7 +107,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div id="accordion" class="col-7">
+                <div id="accordion" class="col-md mb-3">
                     <div class="card">
                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     Company Type "Restaurants"
@@ -144,26 +144,26 @@
         </div>
         <div class="row mt-5">
             <div class="card-deck">
-                <div class="card">
-                    <img class="card-img-top" src="https://png.icons8.com/color/260/businessman.png" alt="Card image cap">
+                <div class="card blogcard">
+                    <img class="card-img-top" src="https://images.unsplash.com/photo-1502226361531-64a073b9a4cc?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=2f055044792cdf25e8aaec15e16440dc&auto=format&fit=crop&w=800&q=80" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title"><a href="#">Blog Post #1</a></h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
-                <div class="card">
-                    <img class="card-img-top" src="https://png.icons8.com/color/260/businessman.png" alt="Card image cap">
+                <div class="card blogcard">
+                    <img class="card-img-top" src="https://images.unsplash.com/photo-1490938182925-d897c6d99d0b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=db0e77f616e903dded12c926340e9df4&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title"><a href="#">Blog Post #2</a></h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                 </div>
-                <div class="card">
-                    <img class="card-img-top" src="https://png.icons8.com/color/260/businessman.png" alt="Card image cap">
+                <div class="card blogcard">
+                    <img class="card-img-top" src="https://images.unsplash.com/photo-1440613905118-99b921706b5c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=36e1e24619c1947c6b775774a1e8eded&auto=format&fit=crop&w=1050&q=80" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
+                        <h5 class="card-title"><a href="#">Blog Post #3</a></h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
@@ -188,7 +188,7 @@
                                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                             </div>
                         </div>
-                        <div class="col-md-4 text-center align-bottom">
+                        <div class="col-md-4 text-center align-bottom" id="icons">
                             <a href="#" class="mx-3"><i class="fab fa-instagram fa-3x"></i></a>
                             <a href="#" class="mx-3"><i class="fab fa-facebook fa-3x"></i></a>
                             <a href="#" class="mx-3"><i class="fab fa-twitter fa-3x"></i></a>
