--- a/index.html
+++ b/index.html
@@ -86,19 +86,24 @@
                         </a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Product 1</a>
-                            <a class="dropdown-item" href="#">Product 2</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Another Product</a>
                         </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-4" href="#">Contact</a>
                     </li>
+                     <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+                            <img class="groupon" src="assets/img/groupon-logo-transparent.png">
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Product 1</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </nav>
         <div class="jumbotron pb-2 pt-6 text-center">
-            <img src="assets/img/Logo.jpg" width="200" height="auto">
+            <img class="mt-5" src="assets/img/Logo.jpg" width="200" height="auto">
             <h1 class="display-3">Eat. Shop. Play.</h1>
             <p class="lead">The Broadway Merchants Association is bringing companies and the community closer together everyday.</p>
         </div>
@@ -119,13 +124,9 @@
                     <img src="assets/img/william-white-34988-unsplash.jpg">
                     <img src="assets/img/roman-bozhko-251412-unsplash.jpg">
                 </div>
-                <div class="column">
-                    <img src="assets/img/william-white-34988-unsplash.jpg">
-                    <img src="assets/img/roman-bozhko-251412-unsplash.jpg">
-                </div>
             </div>
             <!--       Article Gallery-->
-            <h1 class="display-3">Connect.</h1>
+            <h1 class="display-3 pt-5">Connect.</h1>
             <p class="lead">Explore our community and become part of the alliance.</p>
             <iframe class="mainmap" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6053.706816712172!2d-74.00827580653745!3d40.65516168490206!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25ac0786c3207%3A0x97a4c7862e8ef155!2sIndustry+City!5e0!3m2!1sen!2sus!4v1520485263039" width="1000" height="450" frameborder="0" allowfullscreen></iframe>
             <p class="lead m-0">
@@ -137,7 +138,7 @@
             <div class="row">
                 <div id="accordion" class="col-md mb-3">
                     <div class="card">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <button class="btn btn-link cordbtn text-left" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     Company Type "Restaurants"
                                 </button>
                         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
